--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Justin Bieber's Vespa - All about the collaboration between Justin Bieber and Vespa.">
     <meta name="keywords" content="Justin Bieber, Vespa, Scooter, Collaboration">
     <meta name="author" content="Your Name">
-    <title>Justin Bieber's Vespa</title>
+    <title>Justin Bieber Vespa</title>
 </head>
 <body>
     <header>
-        <h1>Justin Bieber's Vespa</h1>
+        <h1>Justin Bieber Vespa</h1>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section id="home">
-            <h2>Welcome to Justin Bieber's Vespa</h2>
+            <h2>Welcome to Justin Bieber Vespa</h2>
             <p>Discover the unique collaboration between Justin Bieber and Vespa, bringing you an exclusive and stylish scooter experience.</p>
         </section>
         <section id="about">
