--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             width: 100%;
         }
         /* Responsive Design */
-        @media (max-width: 768px) {
+        @media (max-width: 800px) {
             nav ul {
                 flex-direction: column;
             }
@@ -96,9 +96,13 @@
         <section id="gallery">
             <h2>Gallery</h2>
             <p>Check out some images of Justin Bieber's Vespa:</p>
-            <img src="justin-bieber-vespa-1.jpeg" alt="Justin Bieber with Vespa">
-            <img src="justin-bieber-vespa-2.jpeg" alt="Justin Bieber's custom Vespa">
-            <img src="justin-bieber-vespa-3.jpeg" alt="Close-up of Justin Bieber's Vespa design">
+            <table style="width: 100%;">
+                <tr>
+                    <img src="justin-bieber-vespa-1.jpeg" alt="Justin Bieber with Vespa">
+                    <img src="justin-bieber-vespa-2.jpeg" alt="Justin Bieber's custom Vespa">
+                    <img src="justin-bieber-vespa-3.jpeg" alt="Close-up of Justin Bieber's Vespa design"> 
+                </tr>
+            </table>
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
