--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
             <p>Check out some images of Justin Bieber's Vespa:</p>
             <table style="width: 100%;">
                 <tr>
-                    <img src="justin-bieber-vespa-1.jpeg" alt="Justin Bieber with Vespa">
-                    <img src="justin-bieber-vespa-2.jpeg" alt="Justin Bieber's custom Vespa">
-                    <img src="justin-bieber-vespa-3.jpeg" alt="Close-up of Justin Bieber's Vespa design"> 
+                    <td><img src="images/justin-bieber-vespa-1.jpg" alt="Justin Bieber with Vespa" width="100%" height="auto"></td>
+                    <td><img src="images/justin-bieber-vespa-2.jpg" alt="Justin Bieber's custom Vespa" width="100%" height="auto"></td>
+                    <td><img src="images/justin-bieber-vespa-3.jpg" alt="Close-up of Justin Bieber's Vespa design" width="100%" height="auto"></td>
                 </tr>
             </table>
         </section>
