--- a/index.html
+++ b/index.html
@@ -96,13 +96,9 @@
         <section id="gallery">
             <h2>Gallery</h2>
             <p>Check out some images of Justin Bieber's Vespa:</p>
-            <table style="width: 100%;">
-                <tr>
-                    <td><img src="images/justin-bieber-vespa-1.jpeg" alt="Justin Bieber with Vespa" width="100%" height="auto"></td>
-                    <td><img src="images/justin-bieber-vespa-2.jpeg" alt="Justin Bieber's custom Vespa" width="100%" height="auto"></td>
-                    <td><img src="images/justin-bieber-vespa-3.jpeg" alt="Close-up of Justin Bieber's Vespa design" width="100%" height="auto"></td>
-                </tr>
-            </table>
+            <img src="justin-bieber-vespa-1.jpeg" alt="Justin Bieber with Vespa">
+            <img src="justin-bieber-vespa-2.jpeg" alt="Justin Bieber's custom Vespa">
+            <img src="justin-bieber-vespa-3.jpeg" alt="Close-up of Justin Bieber's Vespa design">
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
