--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             position: sticky;
             top: 0;
             z-index: 1000;
+            text-align: center;
         }
         header h1 {
             margin: 0;
@@ -67,6 +68,9 @@
         @media (max-width: 800px) {
             nav ul {
                 flex-direction: column;
+            }
+            form {
+                width: 90%;
             }
         }
     </style>
