--- a/index.html
+++ b/index.html
@@ -8,29 +8,46 @@
     <meta name="author" content="Your Name">
     <title>Justin Bieber Vespa</title>
     <style>
+        @font-face {
+            font-family: 'OpenSans';
+            src: url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
+        }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'OpenSans', Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-color: #f4f4f4;
         }
         header {
             background-color: #333;
             color: white;
-            padding: 1em 0;
+            padding: 1em;
+            text-align: center;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
             position: sticky;
             top: 0;
             z-index: 1000;
-            text-align: center;
         }
-        header h1 {
-            margin: 0;
-            text-align: center;
+        .hamburger {
+            display: none;
+            cursor: pointer;
+        }
+        .hamburger div {
+            width: 25px;
+            height: 3px;
+            background-color: white;
+            margin: 5px;
+        }
+        nav {
+            display: flex;
+            justify-content: center;
+            background-color: #333;
         }
         nav ul {
             list-style-type: none;
             padding: 0;
             display: flex;
-            justify-content: center;
+            margin: 0;
         }
         nav ul li {
             margin: 0 1em;
@@ -38,39 +55,124 @@
         nav ul li a {
             color: white;
             text-decoration: none;
+            position: relative;
+        }
+        nav ul li a::before {
+            content: '•';
+            color: yellow;
+            position: absolute;
+            left: -10px;
+        }
+        .sidebar {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 250px;
+            height: 100%;
+            background-color: #333;
+            padding-top: 60px;
+            z-index: 999;
+        }
+        .sidebar a {
+            padding: 10px 15px;
+            text-decoration: none;
+            font-size: 25px;
+            color: white;
+            display: block;
+        }
+        .sidebar a:hover {
+            background-color: #575757;
         }
         main {
             padding: 1em;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-image: url('background.jpg');
+            background-size: cover;
+            background-position: center;
         }
         section {
             margin: 2em 0;
+            text-align: center;
+            width: 100%;
+            max-width: 800px;
         }
-        section img {
-            max-width: 100%;
+        .grid-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-gap: 1em;
+            width: 100%;
+        }
+        .grid-item {
+            background-color: white;
+            padding: 1em;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+        .grid-item:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+        .responsive-image {
+            width: 100%;
             height: auto;
+            border-radius: 8px;
         }
         form {
             display: flex;
             flex-direction: column;
+            align-items: center;
         }
-        form label, form input, form textarea, form select, form button {
+        form label, form input, form textarea, form select, form button, form fieldset {
+            width: 100%;
+            max-width: 600px;
             margin: 0.5em 0;
+        }
+        form fieldset {
+            border: 1px solid #ccc;
+            padding: 1em;
+            text-align: left;
+        }
+        form button {
+            background-color: #333;
+            color: white;
+            padding: 1em;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        form button:hover {
+            background-color: #555;
         }
         footer {
             background-color: #333;
             color: white;
             text-align: center;
             padding: 1em 0;
+            position: fixed;
             bottom: 0;
             width: 100%;
         }
         /* Responsive Design */
         @media (max-width: 800px) {
+            .hamburger {
+                display: block;
+                position: absolute;
+                top: 15px;
+                right: 15px;
+            }
             nav ul {
                 flex-direction: column;
             }
-            form {
-                width: 90%;
+            .grid-container {
+                grid-template-columns: 1fr;
+            }
+            .sidebar {
+                display: block;
             }
         }
     </style>
@@ -78,6 +180,11 @@
 <body>
     <header>
         <h1>Justin Bieber Vespa</h1>
+        <div class="hamburger" onclick="toggleSidebar()">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -87,6 +194,12 @@
             </ul>
         </nav>
     </header>
+    <div class="sidebar" id="sidebar">
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#contact">Contact</a>
+    </div>
     <main>
         <section id="home">
             <h2>Welcome to Justin Bieber Vespa</h2>
@@ -96,10 +209,27 @@
             <h2>About the Collaboration</h2>
             <p>Justin Bieber, the global pop sensation, has teamed up with Vespa to create a one-of-a-kind scooter that combines his unique style with Vespa's iconic design. This limited edition Vespa features exclusive graphics, custom colors, and personalized details that reflect Bieber's influence.</p>
         </section>
-        <section id="gallery">
+        <section id="gallery" class="grid-container">
             <h2>Gallery</h2>
             <p>Check out some images of Justin Bieber's Vespa:</p>
-            <img src="justin-bieber-vespa-1.jpeg" alt="Justin Bieber with Vespa">
+            <div class="grid-item">
+                <picture>
+                    <source srcset="images/justin-bieber-vespa-1.jpg" media="(min-width: 800px)">
+                    <img src="images/justin-bieber-vespa-1.jpeg" alt="Justin Bieber with Vespa" class="responsive-image">
+                </picture>
+            </div>
+            <div class="grid-item">
+                <picture>
+                    <source srcset="images/justin-bieber-vespa-2.jpg" media="(min-width: 800px)">
+                    <img src="images/justin-bieber-vespa-2.jpeg" alt="Justin Bieber's custom Vespa" class="responsive-image">
+                </picture>
+            </div>
+            <div class="grid-item">
+                <picture>
+                    <source srcset="images/justin-bieber-vespa-3.jpg" media="(min-width: 800px)">
+                    <img src="images/justin-bieber-vespa-3.jpeg" alt="Close-up of Justin Bieber's Vespa design" class="responsive-image">
+                </picture>
+            </div>
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
@@ -136,5 +266,15 @@
     <footer>
         <p>&copy; 2024 Justin Bieber's Vespa</p>
     </footer>
+    <script>
+        function toggleSidebar() {
+            var sidebar = document.getElementById("sidebar");
+            if (sidebar.style.display === "block") {
+                sidebar.style.display = "none";
+            } else {
+                sidebar.style.display = "block";
+            }
+        }
+    </script>
 </body>
 </html>
