--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Justin Bieber's Vespa - All about the collaboration between Justin Bieber and Vespa.">
     <meta name="keywords" content="Justin Bieber, Vespa, Scooter, Collaboration">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Your Name"> 
     <title>Justin Bieber Vespa</title>
     <style>
         @font-face {
@@ -153,7 +153,6 @@
             color: white;
             text-align: center;
             padding: 1em 0;
-            position: fixed;
             bottom: 0;
             width: 100%;
         }
@@ -214,19 +213,19 @@
             <p>Check out some images of Justin Bieber's Vespa:</p>
             <div class="grid-item">
                 <picture>
-                    <source srcset="images/justin-bieber-vespa-1.jpg" media="(min-width: 800px)">
+                    <source srcset="images/justin-bieber-vespa-1.jpeg" media="(min-width: 800px)">
                     <img src="images/justin-bieber-vespa-1.jpeg" alt="Justin Bieber with Vespa" class="responsive-image">
                 </picture>
             </div>
             <div class="grid-item">
                 <picture>
-                    <source srcset="images/justin-bieber-vespa-2.jpg" media="(min-width: 800px)">
+                    <source srcset="images/justin-bieber-vespa-2.jpeg" media="(min-width: 800px)">
                     <img src="images/justin-bieber-vespa-2.jpeg" alt="Justin Bieber's custom Vespa" class="responsive-image">
                 </picture>
             </div>
             <div class="grid-item">
                 <picture>
-                    <source srcset="images/justin-bieber-vespa-3.jpg" media="(min-width: 800px)">
+                    <source srcset="images/justin-bieber-vespa-3.jpeg" media="(min-width: 800px)">
                     <img src="images/justin-bieber-vespa-3.jpeg" alt="Close-up of Justin Bieber's Vespa design" class="responsive-image">
                 </picture>
             </div>
