--- a/index.html
+++ b/index.html
@@ -7,173 +7,7 @@
     <meta name="keywords" content="Justin Bieber, Vespa, Scooter, Collaboration">
     <meta name="author" content="Your Name">
     <title>Justin Bieber Vespa</title>
-    <style>
-        @font-face {
-            font-family: 'OpenSans';
-            src: url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-        }
-        body {
-            font-family: 'OpenSans', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 1em;
-            text-align: center;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            position: sticky;
-            top: 0;
-            z-index: 1000;
-        }
-        .hamburger {
-            display: none;
-            cursor: pointer;
-        }
-        .hamburger div {
-            width: 25px;
-            height: 3px;
-            background-color: white;
-            margin: 5px;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #333;
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            display: flex;
-            margin: 0;
-        }
-        nav ul li {
-            margin: 0 1em;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            position: relative;
-        }
-        nav ul li a::before {
-            content: '•';
-            color: yellow;
-            position: absolute;
-            left: -10px;
-        }
-        .sidebar {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 250px;
-            height: 100%;
-            background-color: #333;
-            padding-top: 60px;
-            z-index: 999;
-        }
-        .sidebar a {
-            padding: 10px 15px;
-            text-decoration: none;
-            font-size: 25px;
-            color: white;
-            display: block;
-        }
-        .sidebar a:hover {
-            background-color: #575757;
-        }
-        main {
-            padding: 1em;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-image: url('background.jpg');
-            background-size: cover;
-            background-position: center;
-        }
-        section {
-            margin: 2em 0;
-            text-align: center;
-            width: 100%;
-            max-width: 800px;
-        }
-        .grid-container {
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-gap: 1em;
-            width: 100%;
-        }
-        .grid-item {
-            background-color: white;
-            padding: 1em;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-        .grid-item:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        }
-        .responsive-image {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        form label, form input, form textarea, form select, form button, form fieldset {
-            width: 100%;
-            max-width: 600px;
-            margin: 0.5em 0;
-        }
-        form fieldset {
-            border: 1px solid #ccc;
-            padding: 1em;
-            text-align: left;
-        }
-        form button {
-            background-color: #333;
-            color: white;
-            padding: 1em;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-        form button:hover {
-            background-color: #555;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1em 0;
-            width: 100%;
-        }
-        /* Responsive Design */
-        @media (max-width: 800px) {
-            .hamburger {
-                display: block;
-                position: absolute;
-                top: 15px;
-                right: 15px;
-            }
-            nav ul {
-                flex-direction: column;
-            }
-            .grid-container {
-                grid-template-columns: 1fr;
-            }
-            .sidebar {
-                display: block;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -228,6 +62,19 @@
                     <img src="justin-bieber-vespa-3.jpeg" alt="Close-up of Justin Bieber's Vespa design" class="responsive-image">
                 </picture>
             </div>
+            
+            <div class="grid-item">
+                <picture>
+                    <source srcset="justin-bieber-vespa-4.jpeg" media="(min-width: 800px)">
+                    <img src="justin-bieber-vespa-4.jpeg" alt="Another angle of Justin Bieber's Vespa" class="responsive-image">
+                </picture>
+            </div>
+            <div class="grid-item">
+                <picture>
+                    <source srcset="justin-bieber-vespa-5.jpeg" media="(min-width: 800px)">
+                    <img src="justin-bieber-vespa-5.jpeg" alt="Detail of Vespa design" class="responsive-image">
+                </picture>
+            </div>
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
@@ -267,11 +114,7 @@
     <script>
         function toggleSidebar() {
             var sidebar = document.getElementById("sidebar");
-            if (sidebar.style.display === "block") {
-                sidebar.style.display = "none";
-            } else {
-                sidebar.style.display = "block";
-            }
+            sidebar.classList.toggle("active");
         }
     </script>
 </body>
